tests/baselines/reference/strictPragma5.errors.txt
tests/cases/conformance/pragma/strict/file3.ts(4,20): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/conformance/pragma/strict/file3.ts(11,1): error TS2322: Type '(arg: string) => number' is not assignable to type '(arg: unknown) => number'.
  Types of parameters 'arg' and 'arg' are incompatible.
    Type 'unknown' is not assignable to type 'string'.
tests/cases/conformance/pragma/strict/file3.ts(19,1): error TS18048: 'c.member' is possibly 'undefined'.


==== tests/cases/conformance/pragma/strict/file3.ts (3 errors) ====
    // @ts-strict
    // @ts-strictPropertyInitialization false
    export function f1(x: string) {}
    f1.call(undefined, 42); // wrong
                       ~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    f1.call(undefined, "ok"); // right
    
    export let a = (arg: string) => 0;
    export let b = (arg: unknown) => 0;
    
    a = b;
    b = a;
    ~
!!! error TS2322: Type '(arg: string) => number' is not assignable to type '(arg: unknown) => number'.
!!! error TS2322:   Types of parameters 'arg' and 'arg' are incompatible.
!!! error TS2322:     Type 'unknown' is not assignable to type 'string'.
    
    export class A {
        prop: string;
        constructor() {}
    }
    
    declare var c: { member?: string };
    c.member.charAt(0);
    ~~~~~~~~
!!! error TS18048: 'c.member' is possibly 'undefined'.
    